# Learning_stuff

./: .gitignore  README.md
Cpp/: CMakeLists.txt
Cpp/DI_variadic/: CMakeLists.txt  Doxyfile.in  abstract_object.hpp  app.cpp  bad_type_map.cpp  di_config.hpp  injector.hpp  type_map.hpp  type_map_example.cpp
Cpp/DI_variadic/docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  abstract__object_8hpp.html  abstract__object_8hpp__dep__incl.map  abstract__object_8hpp__dep__incl.md5  abstract__object_8hpp__incl.map  abstract__object_8hpp__incl.md5  abstract__object_8hpp_source.html  annotated.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  bad__type__map_8cpp.html  bad__type__map_8cpp__incl.map  bad__type__map_8cpp__incl.md5  classcore_1_1abstract__instance__container-members.html  classcore_1_1abstract__instance__container.html  classcore_1_1abstract__instance__container__inherit__graph.map  classcore_1_1abstract__instance__container__inherit__graph.md5  classcore_1_1instance__container-members.html  classcore_1_1instance__container.html  classcore_1_1instance__container__coll__graph.map  classcore_1_1instance__container__inherit__graph.md5  classcore_1_1type__map-members.html  classcore_1_1type__map.html  classdi__config-members.html  classdi__config.html  classes.html  classinjector-members.html  classinjector.html  classinjector__coll__graph.map  classinjector__coll__graph.md5  di__config_8hpp.html  di__config_8hpp__dep__incl.map  di__config_8hpp__dep__incl.md5  di__config_8hpp__incl.map  di__config_8hpp__incl.md5  di__config_8hpp_source.html  dir_332c553fc49b1a13451acb19cc9e7bba.html  dir_332c553fc49b1a13451acb19cc9e7bba_dep.map  (+94 more)
Cpp/DI_variadic/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+17 more)
Cpp/Derivatives/: Ridders.h  main.cc
Cpp/Factories/: CMakeLists.txt  arguments_factory.cpp  basic_factory.cpp  basic_factory_2.cpp
Cpp/Forwarding_reference/: CMakeLists.txt  debug_decorator.cc  std_forward_1.cc  std_forward_wrong.cc
Cpp/Template_method/: CMakeLists.txt
Cpp/computation_graph/: CMakeLists.txt  activation_node.hpp  app.cpp  custom_activation_function.hpp  distribution_policies.hpp  identity.hpp  input_node.hpp  linear_node.hpp  mat_policies.hpp  node.hpp  nodes.hpp  tanh.hpp  test.cpp  test_NNAD.cpp  utils.hpp  utils_distribution.hpp
Cpp/crtp/: CMakeLists.txt  base_size.cpp  basic.cpp  class_registry.cpp  destructor.cpp  static_polymorphism.cpp
Cpp/dag/: CMakeLists.txt  node.hpp
Cpp/free/: CMakeLists.txt  deleted_key.cpp  implicit_conversion_and_copy_initialization.cpp
Cpp/pipeline/: CMakeLists.txt  simple_push_down_pipeline.cpp  test_1.cpp
Cpp/policy/: CMakeLists.txt  no_template_policy.cpp  smart_ptr.cpp  smart_ptr_concept.cpp  smartptr_for_no_template.cpp  template_template.cpp  template_template2.cpp
Cpp/state_pattern/: CMakeLists.txt  simle_state.cpp  simle_state_instant.cpp
Cpp/tests/: CMakeLists.txt  Eigen_contraction.cpp  test1.cpp  test_CRTP.cpp  test_eigen.cpp  test_policy.cpp  test_simplified.cpp
python/CI_system/: README.md  dispatcher.py  helpers.py  mylogging.py  repo_observer.py  run_of_fail.sh  update_repo.sh
