cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(CppStuff CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

enable_testing()
add_subdirectory(Forwarding_reference)
add_subdirectory(crtp)
add_subdirectory(Template_method)
add_subdirectory(tests)
add_subdirectory(push_base_pipeline)
#add_subdirectory(Factories)
#add_subdirectory(Factories)
#message(BINARY="${CMAKE_BINARY_DIR}")
#message(CURRENT_BINARY="${CMAKE_CURRENT_BINARY_DIR}")
#message(PROJECT_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
#message(CURRENT_SOURCE="${CMAKE_CURRENT_SOURCE_DIR}")
